[package]
name = "txnflow"
version = "0.1.0"
authors = ["Ran Magen <enricomagen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "txnflow"

[dependencies]
async-trait = "0.1.50"
csv = "1.1.6"
futures = "0.3.15"
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0.24"
float-cmp = "0.8.0"

[dev-dependencies]
assert_cmd = "1.0.4"
predicates = "1.0.8"
tokio = { version = "1.6.0", features = ["full"] }
